testing connection to server

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
             </li>
         </ul>
 
+        <input type="text" id="test_textbox_key">
+        </input>
+        <input type="text" id="test_textbox_value">
+        </input>
+        <button>send data to save in db TESTING</button>
+
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
