testing connection to server1

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </input>
         <input type="text" id="test_textbox_value">
         </input>
-        <button>send data to save in db TESTING</button>
+        <button onclick="send_data_to_db_TESTING()">send data to save in db TESTING</button>
 
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
