--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <script src="script.js">
+    </script>
     <main>
         <h1>Modals</h1>
         <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
@@ -34,7 +36,7 @@
         </input>
         <input type="text" id="test_textbox_value">
         </input>
-        <button onclick="send_data_to_db_TESTING();">
+        <button id="submit_button">
             send data to save in db TESTING
         </button>
 
@@ -45,9 +47,5 @@
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
     <div id="viewport-params-expand"></div>
-        
-    
-    <script src="script.js">
-    </script>
 </body>
 </html>
