testing connection to server11

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         </input>
         <input type="text" id="test_textbox_value">
         </input>
-        <button id="submit_button">
+        <button id="submit_button" onclick="send_data();">
             send data to save in db TESTING
         </button>
 
