testing connection to server18

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
             send data to save in db TESTING
         </button>
 
+        <label id="error_panel"></label>
+
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
