--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <script src="script.js">
     </script>
     <main>
         <h1>Modals</h1>
@@ -54,5 +53,6 @@
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
     <div id="viewport-params-expand"></div>
+    <script src="script.js"></script>
 </body>
 </html>
