--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,10 @@
 
         <label id="error_panel"></label>
 
-        <label id="statusLabel">Initial Status: Not loaded</label>
-        <button id="refreshBtn">Refresh Status</button>
+        <div>
+            <label id="statusLabel">Initial Status: Not loaded</label>
+            <button id="refreshBtn">Refresh Status</button>
+        </div>
 
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
