added server notification handling in testing

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,10 @@
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
         <button onclick="toggleMainButton();">Toggle Main Button</button>
+
+        <div id="notification-banner">
+            
+        </div>
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
