adding check for user id

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 <body>
     </script>
     <main>
+        <div id="user_id_window">
+            <p id="user_id"></p>
+        </div>
         <h1>Modals</h1>
         <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
         <button onclick="showPopup();">Launch Popup</button>
@@ -53,7 +56,7 @@
         <button onclick="toggleMainButton();">Toggle Main Button</button>
 
         <div id="notification-banner">
-            
+
         </div>
     </main>
     <div id="viewport"></div>
