removed user id hardcode

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,6 @@
 <body>
     </script>
     <main>
-        <div id="user_id_window">
-            <p id="user_id"></p>
-        </div>
         <h1>Modals</h1>
         <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
         <button onclick="showPopup();">Launch Popup</button>
@@ -56,7 +53,9 @@
         <button onclick="toggleMainButton();">Toggle Main Button</button>
 
         <div id="notification-banner">
-
+            <h3>here are your notification parameters</h3>
+            <p id="parameter1">param2</p>
+            <p id="parameter2">param2</p>
         </div>
     </main>
     <div id="viewport"></div>
