quick heroku deploy

--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,13 @@
         <!-- test register tracking number with user auth -->
         <div>
             <input type="text" id="tracking_number">
-                balls
+                tracking
             </input>
             <input type="text" id="carrier_text">
-                balls
+                carrier
             </input>
             <button id="register_number_button" onclick="register_one_tracking_number();">
-                send data to save in db TESTING
+                register and pull data to db
             </button>
         </div>
 
