quick heroku deploy

--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
 
         <!-- test register tracking number with user auth -->
         <div>
-            <input type="text" textContent="87VY18633903A081" id="tracking_number">
+            <input type="text" value="87VY18633903A081" id="tracking_number">
                 tracking
             </input>
-            <input type="text" textContent="10017" id="carrier_text">
+            <input type="text" value="10017" id="carrier_text">
                 carrier
             </input>
             <button id="register_number_button" onclick="register_one_tracking_number();">
