quick heroku deploy

--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,7 @@
 
         <div id="notification-banner">
             <h3>here are your notification parameters</h3>
-            <p id="parameter1">param2</p>
-            <p id="parameter2">param2</p>
+            <div id="update-box"></div>
         </div>
     </main>
     <div id="viewport"></div>
