--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,6 @@
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
     <div id="viewport-params-expand"></div>
-    <script src="script.js"></script>
+    <script src="script.ts"></script>
 </body>
 </html>
