--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                 carrier
             </input>
             <button id="register_number_button" onclick="register_one_tracking_number();">
-                register tracking number for updates
+                register tracking number for notification updates
             </button>
         </div>
 
