test deploy to see if there is any hope in the heroku remote

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <input type="text" value="87VY18633903A081" id="tracking_number">
                 tracking
             </input>
-            <input type="text" value="10017" id="carrier_text">
+            <input type="text" value="" id="carrier_text">
                 carrier
             </input>
             <button id="register_number_button" onclick="register_one_tracking_number();">
