--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,6 @@
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
     <div id="viewport-params-expand"></div>
-    <script src="../dist/script.js"></script>
+    <script src="../dist/src/script.js"></script>
 </body>
 </html>
