--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,6 @@
             <div id="update-box"></div>
         </div>
     </main>
-    <script src="../dist/src/script.js"></script>
+    <script type="module" src="../dist/src/script.js"></script>
 </body>
 </html>
